# flomo-transcriber

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  UpdateLog.md  build.bat  fail-image-handle-guidance.md  pyproject.toml
.omo/run-continuation/: ses_10a3f5e6bffeAGPAkmC9FTB71R.json  ses_10a404216ffeHuQiUMXO6cQu0C.json  ses_10a404bdeffeEh20xfvQi6UqN2.json  ses_10a405840ffeqV3o2fLNRJj7xl.json  ses_10a4063a1ffeU0vmeoScyhNm6Z.json  ses_10a406e5bffedFhGt2Z1drd6wH.json  ses_10a40a1ffffevd5Bmu6kVfmTXY.json  ses_10a42159bffeJPJSKIByyw53JM.json  ses_10a4976ffffeinLHTnjb8W6LOY.json  ses_10a4a1999ffeETGmqFN5ClzHQ3.json  ses_10a4a20fbffeeSQ508WVc3LZz0.json  ses_10a4a2a93ffe7GuT0ICcXqdE4K.json  ses_10a4a3339ffehTbfTqpH4wLrok.json  ses_10a4a3bc6ffey44UkHCbi33aLd.json  ses_10a5d0c0bffegFN77USEnGZO2w.json  ses_10a5d15c4ffeH5Nv9lJ6IuEh5s.json  ses_10a5d3019ffeti91Nz7xQzC0Uk.json  ses_10a748e6bffeZVNGVBdoiufGpu.json
gui/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
scripts/: 00_probe_lmstudio_image.bat  00_probe_lmstudio_image.sh  10_stage2_enrich_lmstudio.bat  10_stage2_enrich_lmstudio.sh  20_stage3_4_build_context.bat  20_stage3_4_build_context.sh  30_stage2_4_prepare_context.bat  40_retry_failed_images_lmstudio.bat  AGENTS.md  build_chunks.py  build_gui_sidecar.py  build_reports.py  check_open_source_readiness.py  enrich_images.py  extract_raw.py  flomo_sidecar.py  guide.py  merge_monthly.py  probe_lmstudio_vlm.py  retry_failed_images.py  run_pipeline.py  validate_chunks.py  validate_enriched_images.py  validate_monthly.py  validate_reports.py  validate_store.py
src/flomo_pipeline/: __init__.py  workflow.py
src/flomo_pipeline/chunk/: AGENTS.md  __init__.py  models.py  runner.py  token_estimator.py  validator.py
src/flomo_pipeline/common/: AGENTS.md  __init__.py  io.py  models.py  validation.py
tests/: conftest.py  test_chunks.py  test_cli.py  test_enrich_images.py  test_extract.py  test_image_slicer.py  test_io.py  test_lmstudio_provider.py  test_merge_monthly.py  test_reports.py  test_validator.py
(+31 files in other folders)
