[project]
name = "flomo-transcriber"
version = "0.1.0"
description = "Turn local Flomo exports into validated LLM-ready text chunks"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/flomo_pipeline"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
