[package]
name = "flomo-transcriber-gui"
version = "0.1.0"
description = "Desktop GUI for flomo-transcriber"
authors = ["flomo-transcriber contributors"]
edition = "2021"

[lib]
name = "flomo_transcriber_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
